Climate page: moved weather info to top navbar; moved room temp and humidity inside horizontal list for each room area. In top navbar made a toggle/switch between time and weather info

--- a/app/assets/scss/_ch5-reboot.scss
+++ b/app/assets/scss/_ch5-reboot.scss
@@ -92,7 +92,7 @@ ch5-list.ch5-custom-list {
 
     @include media-breakpoint-down(sm) {
       & > .list-item {
-        padding: 1.5rem;
+        padding: 1rem 1.5rem 1.5rem;
       }
 
       .vertical-list-item
