--- a/app/components/shades/shades.html
+++ b/app/components/shades/shades.html
@@ -3,7 +3,7 @@
   <div
     class="blinds-list-container d-flex d-sm-none justify-content-center align-items-center"
   >
-    <ch5-list size="3" orientation="vertical" indexId="idx">
+    <ch5-list size="3" orientation="vertical" indexId="idx" receivestatesize="">
       <template>
         <span class="window-label">Window #{{idx}} </span>
 
