--- a/app/components/lighting/lighting.html
+++ b/app/components/lighting/lighting.html
@@ -49,7 +49,7 @@
     <div class="col-md-9">
       <ch5-list
         class="ch5-custom-list"
-        maxHeight="100%"
+        maxHeight="85%"
         itemWidth="100%"
         orientation="vertical"
         indexId="idx"
@@ -60,7 +60,7 @@
           <div class="vertical-list-item">
             <span
               class="label"
-              data-ch5-textcontent="Floor[0].Room[0].DimmableLights[0].NameOfLight"
+              data-ch5-textcontent="Room.DimmableLights[{{idx}}].NameOfLight"
               >Label</span
             >
             <div class="d-flex align-items-center">
