--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -2248,3 +2248,55 @@
     max-height: 100%;
   }
 }
+.hide {
+  display: none !important;
+}
+.main-section-increased {
+  padding-top: 0;
+}
+
+// Inactivity Page
+.inactivity-page {
+  height: 100vh;
+  width: 100vw;
+  padding-top: 6rem;
+  background: #0a0a0a;
+  .row {
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 4rem;
+    color: #696e73 !important;
+  }
+  h4 {
+    font-size: 1.3rem;
+    color: #474d52 !important;
+  }
+  h2 {
+    font-size: 1.7rem;
+  }
+  h3 {
+    font-size: 1.4rem;
+    margin-top: 0.2rem;
+  }
+  h1,
+  h2,
+  h3,
+  span {
+    color: #696e73 !important;
+  }
+  span {
+    font-size: 1.5rem;
+    color: #696e73 !important;
+    font-weight: bold;
+  }
+  hr {
+    height: 0.1px;
+    width: 50%;
+    background-color: #482424;
+  }
+  .room-temp-container {
+    margin-top: 7rem;
+  }
+}
