Blinds Page: minimized sizes of windows and buttons so the entire page will fit in 100% and user wont have to scroll down

--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -858,6 +858,13 @@
       margin-bottom: 0.5rem;
     }
   }
+  .navbar-text {
+    @include media-breakpoint-up(sm) {
+      margin-top: 0.3rem;
+      padding-top: 0.2rem;
+      padding-bottom: 0.2 rem;
+    }
+  }
 
   .blackout-shades-btn {
     position: absolute;
@@ -866,9 +873,6 @@
     display: inline-block;
     .ch5-button {
       margin-right: 0.5rem;
-      @include media-breakpoint-up(sm) {
-        // height: 40px !important;
-      }
     }
     @include media-breakpoint-up(lg) {
       left: 42%;
@@ -879,6 +883,9 @@
     display: flex;
     justify-content: center;
     // margin-bottom: 1rem;
+    @include media-breakpoint-up(sm) {
+      margin-top: 0.8rem !important;
+    }
   }
 
   .open-close-btn {
@@ -887,8 +894,8 @@
     grid-auto-rows: 1fr;
     grid-gap: 2rem;
     @include media-breakpoint-up(sm) {
-      grid-template-columns: repeat(3, minmax(auto, 17vmin));
-      grid-gap: 1.5rem;
+      grid-template-columns: repeat(3, minmax(auto, 14vmin));
+      grid-gap: 1.7rem;
     }
     @include media-breakpoint-up(md) {
       grid-template-columns: repeat(3, minmax(auto, 16vmin));
@@ -904,7 +911,11 @@
     }
 
     .ch5-button {
+      align-items: center;
       border: none;
+      @include media-breakpoint-up(sm) {
+        font-size: 1rem;
+      }
     }
   }
 
@@ -932,6 +943,10 @@
         right: 0;
         position: absolute;
         z-index: -1;
+        @include media-breakpoint-up(sm) {
+          left: -10.5rem;
+          bottom: -8rem;
+        }
       }
     }
   }
@@ -971,8 +986,8 @@
     height: 18rem;
     width: 25rem;
     @include media-breakpoint-up(sm) {
-      height: 15rem;
-      width: 21rem;
+      height: 13rem;
+      width: 20rem;
     }
     @include media-breakpoint-up(md) {
       height: 20rem;
@@ -1000,8 +1015,8 @@
         }
       }
       @include media-breakpoint-up(sm) {
-        height: 15rem;
-        width: 10.3rem !important;
+        height: 12.6rem;
+        width: 9.8rem !important;
       }
       @include media-breakpoint-up(md) {
         height: 19.2rem;
@@ -1010,13 +1025,13 @@
         position: static;
       }
       .noUi-target {
-        background: transparent;
+        background: transparent !important;
         height: 17rem;
         width: 12rem;
         border: 0;
         @include media-breakpoint-up(sm) {
-          height: 15rem;
-          width: 10rem;
+          height: 12.6rem;
+          width: 9.5rem;
         }
         @include media-breakpoint-up(md) {
           height: 20rem;
@@ -1079,6 +1094,10 @@
       .list-item {
         border-right: 1px solid rgb(78, 78, 78);
         padding: 0 3rem 2rem;
+
+        @include media-breakpoint-up(sm) {
+          padding-bottom: 0.6rem;
+        }
 
         @include media-breakpoint-up(xl) {
           padding-top: 2rem;
