--- a/app/components/blackout/blackout.html
+++ b/app/components/blackout/blackout.html
@@ -22,7 +22,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_left_blackout_value"
+            receivestatevalue="Rooms.Blinds.LeftBlackoutValue"
           >
           </ch5-slider>
           <ch5-slider
@@ -30,7 +30,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_right_blackout_value"
+            receivestatevalue="Rooms.Blinds.RightBlackoutValue"
           >
           </ch5-slider>
         </div>
@@ -41,7 +41,7 @@
               label="Open"
               shape="circle"
               stretch="both"
-              sendeventonclick="open_blackout"
+              sendeventonclick="Rooms.Blinds.OpenBlackout"
             >
             </ch5-button>
             <ch5-button
@@ -49,7 +49,7 @@
               label="Stop"
               shape="circle"
               stretch="both"
-              sendeventonclick="stop_blackout"
+              sendeventonclick="Rooms.Blinds.StopBlackout"
             >
             </ch5-button>
             <ch5-button
@@ -57,7 +57,7 @@
               label="Close"
               shape="circle"
               stretch="both"
-              sendeventonclick="close_blackout"
+              sendeventonclick="Rooms.Blinds.CloseBlackout"
             >
             </ch5-button>
           </div>
@@ -89,7 +89,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_left_blackout_value"
+            receivestatevalue="Rooms.Blinds.LeftBlackoutValue"
           >
           </ch5-slider>
           <ch5-slider
@@ -97,7 +97,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_right_blackout_value"
+            receivestatevalue="Rooms.Blinds.RightBlackoutValue"
           >
           </ch5-slider>
         </div>
@@ -108,7 +108,7 @@
               label="Open"
               shape="circle"
               stretch="both"
-              sendeventonclick="open_blackout"
+              sendeventonclick="Rooms.Blinds.OpenBlackout"
             >
             </ch5-button>
             <ch5-button
@@ -116,7 +116,7 @@
               label="Stop"
               shape="circle"
               stretch="both"
-              sendeventonclick="stop_blackout"
+              sendeventonclick="Rooms.Blinds.StopBlackout"
             >
             </ch5-button>
             <ch5-button
@@ -124,7 +124,7 @@
               label="Close"
               shape="circle"
               stretch="both"
-              sendeventonclick="close_blackout"
+              sendeventonclick="Rooms.Blinds.CloseBlackout"
             >
             </ch5-button>
           </div>
