--- a/app/components/shades/shades.html
+++ b/app/components/shades/shades.html
@@ -22,7 +22,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_left_shades_value"
+            receivestatevalue="Rooms.Blinds.LeftShadeValue"
           >
           </ch5-slider>
           <ch5-slider
@@ -30,7 +30,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_right_shades_value"
+            receivestatevalue="Rooms.Blinds.RightShadeValue"
           >
           </ch5-slider>
         </div>
@@ -41,7 +41,7 @@
               label="Open"
               shape="circle"
               stretch="both"
-              sendeventonclick="open_shades"
+              sendeventonclick="Rooms.Blinds.OpenShades"
             >
             </ch5-button>
             <ch5-button
@@ -49,7 +49,7 @@
               label="Stop"
               shape="circle"
               stretch="both"
-              sendeventonclick="stop_shades"
+              sendeventonclick="Rooms.Blinds.StopShades"
             >
             </ch5-button>
             <ch5-button
@@ -57,7 +57,7 @@
               label="Close"
               shape="circle"
               stretch="both"
-              sendeventonclick="close_shades"
+              sendeventonclick="Rooms.Blinds.CloseShades"
             >
             </ch5-button>
           </div>
@@ -88,7 +88,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_left_shades_value"
+            receivestatevalue="Rooms.Blinds.LeftShadeValue"
           >
           </ch5-slider>
           <ch5-slider
@@ -96,7 +96,7 @@
             nohandle="true"
             min="0"
             max="50"
-            receivestatevalue="receive_right_shades_value"
+            receivestatevalue="Rooms.Blinds.RightShadeValue"
           >
           </ch5-slider>
         </div>
@@ -107,7 +107,7 @@
               label="Open"
               shape="circle"
               stretch="both"
-              sendeventonclick="open_shades"
+              sendeventonclick="Rooms.Blinds.OpenShades"
             >
             </ch5-button>
             <ch5-button
@@ -115,7 +115,7 @@
               label="Stop"
               shape="circle"
               stretch="both"
-              sendeventonclick="stop_shades"
+              sendeventonclick="Rooms.Blinds.StopShades"
             >
             </ch5-button>
             <ch5-button
@@ -123,7 +123,7 @@
               label="Close"
               shape="circle"
               stretch="both"
-              sendeventonclick="close_shades"
+              sendeventonclick="Rooms.Blinds.CloseShades"
             >
             </ch5-button>
           </div>
