--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -1,23 +1,23 @@
 <section class="climate-page">
-  <!-- <nav class="navbar navbar-dark"> -->
-  <div class="navbar-text">
-    <div class="room-info pt-2 text-uppercase text-white">
-      <span class="d-sm-block">Climate</span>
-      <h2 class="mb-0" data-ch5-textcontent="Rooms.SelectedRoomName">
-        Room Name
-      </h2>
+    <!-- <nav class="navbar navbar-dark"> -->
+    <div class="navbar-text">
+        <div class="room-info pt-2 text-uppercase text-white">
+            <span class="d-sm-block">Climate</span>
+            <h2 class="mb-0" data-ch5-textcontent="Room.SelectedRoomName">
+                Room Name
+            </h2>
+        </div>
     </div>
-  </div>
-  <!-- <div class="weather-info">
+    <!-- <div class="weather-info">
     <ch5-button
       type="primary"
       shape="circle"
       class="shadow-pulse-button"
       iconClass="fas fa-cloud-sun"
-      sendEventOnClick="Rooms.Climate.WeatherInfoBtnClicked"
+      sendEventOnClick="Room.Climate.WeatherInfoBtnClicked"
     ></ch5-button>
     <ch5-modal-dialog
-      receiveStateShowPulse="Rooms.Climate.WeatherInfoBtnClicked"
+      receiveStateShowPulse="Room.Climate.WeatherInfoBtnClicked"
       closable
       closeIcon="fa fa-window-close"
       hideOkButton="true"
@@ -53,22 +53,15 @@
     </ch5-modal-dialog>
   </div> -->
 
-  <hr />
-  <!-- </nav> -->
-  <div
-    class="climate-list-container d-sm-flex d-none justify-content-center align-items-center"
-  >
-    <ch5-list
-      size="6"
-      orientation="horizontal"
-      indexId="idx"
-      receivestatesize="Climate.GuestRoom.NumberOfRooms"
-    >
-      <template>
+    <hr />
+    <!-- </nav> -->
+    <div class="climate-list-container d-sm-flex d-none justify-content-center align-items-center">
+        <ch5-list size="6" orientation="horizontal" indexId="idx" receivestatesize="NumberOfRooms">
+            <template>
         <div class="room-temp d-flex align-items-center">
           <span
             class="room-label"
-            data-ch5-textcontent="Climate.GuestRoom.Room[{{idx}}].RoomName"
+            data-ch5-textcontent="Room[{{idx}}].RoomName"
             >Room Name</span
           >
           <div class="temp-humidity ml-auto">
@@ -100,8 +93,8 @@
                   label="Fan"
                   stretch="both"
                   shape="rectangle"
-                  sendeventonclick="Climate.GuestRoom.Room[{{idx}}].Mode.FanSetSelected"
-                  receivestateselected="Climate.GuestRoom.Room[{{idx}}].Mode.FanIsSelected"
+                  sendeventonclick="Room[{{idx}}].Mode.FanSetSelected"
+                  receivestateselected="Room[{{idx}}].Mode.FanIsSelected"
                 >
                 </ch5-button>
                 <ch5-button
@@ -109,8 +102,8 @@
                   label="Cool"
                   stretch="both"
                   shape="rectangle"
-                  sendeventonclick="Climate.GuestRoom.Room[{{idx}}].Mode.CoolSetSelected"
-                  receivestateselected="Climate.GuestRoom.Room[{{idx}}].Mode.CoolIsSelected"
+                  sendeventonclick="Room[{{idx}}].Mode.CoolSetSelected"
+                  receivestateselected="Room[{{idx}}].Mode.CoolIsSelected"
                 >
                 </ch5-button>
                 <ch5-button
@@ -118,8 +111,8 @@
                   label="Off"
                   stretch="both"
                   shape="rectangle"
-                  sendeventonclick="Climate.GuestRoom.Room[{{idx}}].Mode.OffSetSelected"
-                  receivestateselected="Climate.GuestRoom.Room[{{idx}}].Mode.OffIsSelected"
+                  sendeventonclick="Room[{{idx}}].Mode.OffSetSelected"
+                  receivestateselected="Room[{{idx}}].Mode.OffIsSelected"
                 >
                 </ch5-button>
               </div>
@@ -139,8 +132,8 @@
             label="High"
             shape="rectangle"
             stretch="both"
-            sendeventonclick="Rooms.Climate.Fan.HighSetSelected"
-            receivestateselected="Rooms.Climate.Fan.HighIsSelected"
+            sendeventonclick="Room.Climate.Fan.HighSetSelected"
+            receivestateselected="Room.Climate.Fan.HighIsSelected"
           >
           </ch5-button>
 
@@ -149,8 +142,8 @@
             label="Medium"
             shape="rectangle"
             stretch="both"
-            sendeventonclick="Rooms.Climate.Fan.MediumSetSelected"
-            receivestateselected="Rooms.Climate.Fan.MediumIsSelected"
+            sendeventonclick="Room.Climate.Fan.MediumSetSelected"
+            receivestateselected="Room.Climate.Fan.MediumIsSelected"
           >
           </ch5-button>
           <ch5-button
@@ -158,8 +151,8 @@
             label="Low"
             shape="rectangle"
             stretch="both"
-            sendeventonclick="Rooms.Climate.Fan.LowSetSelected"
-            receivestateselected="Rooms.Climate.Fan.LowIsSelected"
+            sendeventonclick="Room.Climate.Fan.LowSetSelected"
+            receivestateselected="Room.Climate.Fan.LowIsSelected"
           >
           </ch5-button>
           <ch5-button
@@ -167,8 +160,8 @@
             label="Auto"
             shape="rectangle"
             stretch="both"
-            sendeventonclick="Rooms.Climate.Fan.AutoSetSelected"
-            receivestateselected="Rooms.Climate.Fan.AutoIsSelected"
+            sendeventonclick="Room.Climate.Fan.AutoSetSelected"
+            receivestateselected="Room.Climate.Fan.AutoIsSelected"
           >
           </ch5-button>
         </div>
@@ -194,7 +187,7 @@
                     stretch="both"
                     iconclass="fas fa-plus"
                     onclick=""
-                    sendeventonclick="Rooms.Climate.IncrementTemp"
+                    sendeventonclick="Room.Climate[{{idx}}].IncrementTemp"
                   >
                   </ch5-button>
 
@@ -205,7 +198,7 @@
                     stretch="both"
                     iconclass="fas fa-minus"
                     onclick=""
-                    sendeventonclick="Rooms.Climate.DecrementTemp"
+                    sendeventonclick="Room.Climate[{{idx}}].DecrementTemp"
                   >
                   </ch5-button>
                   <div></div>
@@ -215,6 +208,6 @@
           </div>
         </div>
       </template>
-    </ch5-list>
-  </div>
+        </ch5-list>
+    </div>
 </section>
