--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -938,10 +938,10 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
       .noUi-connect::after {
         transform: rotate(-90deg);
         // background-image: url("/assets/img/blinds/blinds_transp_white_resized.png");
-        background-image: $shades_bg_image;
+        background: $shades_bg_image !important;
 
-        background-repeat: no-repeat;
-        background-size: 150% 150%;
+        background-repeat: no-repeat !important;
+        background-size: 150% 150% !important;
 
         content: "";
         opacity: 0.75;
@@ -963,10 +963,10 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
     .ch5-slider {
       .noUi-connect {
         // background-image: url("/assets/img/blinds/curtain_grey_left_resized.png");
-        background-image: $blackout_bg_image;
+        background: $blackout_bg_image !important;
 
-        background-size: 150% 100%;
-        background-repeat: no-repeat;
+        background-size: 150% 100% !important;
+        background-repeat: no-repeat !important;
         background-color: transparent;
       }
       // &.left-slider {
@@ -985,14 +985,14 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
   }
 
   .slider-container {
+    position: relative;
+    overflow: hidden;
     border-top: 1rem solid rgb(48, 26, 2);
     box-shadow: 0px 5px 6px 5px rgb(85, 83, 83);
     border-radius: 5px;
-    // background-image: url("/assets/img/blinds/window_view1.jpeg");
-    background-image: $window_bg_image;
-
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    // background: $window_bg_image !important;
+    // background-size: 100% 100% !important;
+    // background-repeat: no-repeat !important;
     padding: 0 0 0 0;
     height: 18rem;
     width: 25rem;
@@ -1004,65 +1004,60 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
       height: 20rem;
       width: 30rem;
     }
-    .ch5-slider {
-      display: inline-block !important;
-      // transform-origin: center center;
-      padding: 0 !important;
-      height: 17.2rem;
-      width: 12.3rem !important;
-
-      &.right-slider {
-        transform: rotate(180deg);
-        // transform-origin: center center;
-        .noUi-connects {
-          border-radius: 3px;
-        }
-        .noUi-target {
-          margin-top: 0.2rem;
-
-          @include media-breakpoint-up(sm) {
-            margin-top: -0.1rem;
-          }
-        }
-      }
+    .window-image {
+      width: 100%;
+      height: 100%;
+    }
+    .blinds-image-container-right,
+    .blinds-image-container-left {
+      position: absolute;
+      overflow: hidden;
+      width: 50%;
+      // height: 17.2rem;
       @include media-breakpoint-up(sm) {
-        height: 12.6rem;
-        width: 9.8rem !important;
-      }
-      @include media-breakpoint-up(md) {
-        height: 19.2rem;
-      }
-      .noUi-connects {
-        position: static;
-      }
-      .noUi-target {
-        background: transparent !important;
-        height: 17rem;
-        width: 12rem;
-        border: 0;
-        @include media-breakpoint-up(sm) {
-          height: 12.6rem;
-          width: 9.5rem;
-        }
-        @include media-breakpoint-up(md) {
-          height: 20rem;
-          width: 30rem;
-        }
-      }
-      .noUi-base {
-        border-radius: 5px;
+        height: 12.3rem;
       }
     }
+    .blinds-image-container-right {
+      right: 0;
+      top: 0;
+      transition: ease-in-out 5s;
+    }
+    .blinds-image-container-left {
+      left: 0;
+      top: 0;
+      transition: ease-in-out 5s;
+    }
+    .shades-image-right,
+    .shades-image-left {
+      opacity: 0.7;
+    }
 
-    // slider settings for 1 blinds slider
-
+    // styles for blinds as slider
     // .ch5-slider {
-    //   // transform: rotate(180deg);
+    //   display: inline-block !important;
     //   // transform-origin: center center;
     //   padding: 0 !important;
     //   height: 17.2rem;
+    //   width: 12.3rem !important;
+
+    //   &.right-slider {
+    //     transform: rotate(180deg);
+    //     // transform-origin: center center;
+    //     .noUi-connects {
+    //       border-radius: 3px;
+    //     }
+    //     .noUi-target {
+    //       margin-top: 0.2rem;
+
+    //       @include media-breakpoint-up(sm) {
+    //         margin-top: -0.1rem;
+    //       }
+    //     }
+    //   }
     //   @include media-breakpoint-up(sm) {
-    //     height: 14.2rem;
+    //     height: 12.6rem;
+    //     width: 9.8rem !important;
     //   }
     //   @include media-breakpoint-up(md) {
     //     height: 19.2rem;
@@ -1071,12 +1066,13 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
     //     position: static;
     //   }
     //   .noUi-target {
+    //     background: transparent !important;
     //     height: 17rem;
-    //     width: 25rem;
+    //     width: 12rem;
     //     border: 0;
     //     @include media-breakpoint-up(sm) {
-    //       height: 15rem;
-    //       width: 21rem;
+    //       height: 12.6rem;
+    //       width: 9.5rem;
     //     }
     //     @include media-breakpoint-up(md) {
     //       height: 20rem;
@@ -1086,8 +1082,6 @@ $blackout_bg_image: url("/assets/img/blinds/curtain_grey_left_resized.png");
     //   .noUi-base {
     //     border-radius: 5px;
     //   }
-
-    //
     // }
   }
   ch5-list {
