--- a/app/components/blackout/blackout.html
+++ b/app/components/blackout/blackout.html
@@ -76,15 +76,31 @@
         <span class="window-label">Window #{{idx}} </span>
 
         <div class="slider-container blackout-container container">
-          <!-- <ch5-slider
-            nohandle="true"
-            orientation="vertical"
-            min="0"
-            max="100"
-            receivestatevalue="receive_blackout_value"
+          <ch5-image
+            alt="window-img"
+            class="window-image"
+            url="/assets/img/blinds/window_view1.jpeg"
           >
-          </ch5-slider> -->
-          <ch5-slider
+          </ch5-image>
+          <div class="blinds-image-container-right blackout-horizontal-right">
+            <ch5-image
+              alt="blackout-img-right"
+              class="blackout-image-right"
+              url="/assets/img/blinds/curtain_grey_right.png"
+            >
+            </ch5-image>
+          </div>
+          <div class="blinds-image-container-left blackout-horizontal-left">
+            <ch5-image
+              alt="blackout-img-left"
+              class="blackout-image-left"
+              url="/assets/img/blinds/curtain_grey_left.png"
+            >
+            </ch5-image>
+          </div>
+
+          <!-- Blackout done with ch5-slider -->
+          <!-- <ch5-slider
             class="left-slider"
             nohandle="true"
             min="0"
@@ -99,19 +115,22 @@
             max="50"
             receivestatevalue="Rooms.Blinds.RightBlackoutValue"
           >
-          </ch5-slider>
+          </ch5-slider> -->
         </div>
         <div class="open-close-btn-container mt-3">
           <div class="open-close-btn">
             <ch5-button
+              class="open-horiz-blackout-button"
               id="open_blind"
               label="Open"
+              onclick="blindsPageModule.openBlackout()"
               shape="circle"
               stretch="both"
               sendeventonclick="Rooms.Blinds.OpenBlackout"
             >
             </ch5-button>
             <ch5-button
+              class="stop-horiz-blackout-button"
               id="stop_blind"
               label="Stop"
               shape="circle"
@@ -120,8 +139,10 @@
             >
             </ch5-button>
             <ch5-button
+              class="close-horiz-blackout-button"
               id="close_blind"
               label="Close"
+              onclick="blindsPageModule.closeBlackout()"
               shape="circle"
               stretch="both"
               sendeventonclick="Rooms.Blinds.CloseBlackout"
